[gd_scene load_steps=9 format=3 uid="uid://c7eqighvljirr"]

[ext_resource type="PackedScene" uid="uid://co80wspr81s38" path="res://scenes/player.tscn" id="1_1wph8"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_38qpr"]
[ext_resource type="Texture2D" uid="uid://qhjl2n56v1ax" path="res://assets/sprites/world_tileset.png" id="2_qywc7"]
[ext_resource type="PackedScene" uid="uid://4g45oin0sgi" path="res://scenes/killzone.tscn" id="4_j3ojp"]
[ext_resource type="FontFile" uid="uid://dkyhand71eyt6" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="6_i8qhj"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_oyd8t"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pivrv"]
texture = ExtResource("2_qywc7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_gfsa4"]
sources/0 = SubResource("TileSetAtlasSource_pivrv")

[node name="Game" type="Node2D"]
script = ExtResource("1_38qpr")

[node name="Player" parent="." instance=ExtResource("1_1wph8")]
position = Vector2(34, 31)
collision_layer = 7
collision_mask = 7

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(34, 24)
zoom = Vector2(4, 4)

[node name="Spawn_Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Killzone" parent="." instance=ExtResource("4_j3ojp")]
top_level = true
position = Vector2(32, 103)
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("WorldBoundaryShape2D_oyd8t")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_gfsa4")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(393209, 0, 14, 393210, 0, 14, 393211, 0, 14, 393212, 0, 14, 393213, 0, 14, 393214, 0, 14, 393215, 0, 14, 327680, 0, 14, 327681, 0, 14, 327682, 0, 14, 327683, 0, 14, 327684, 0, 14, 327685, 0, 14, 327686, 0, 14, 327687, 0, 14, 327688, 0, 14, 327689, 0, 14, 327690, 0, 14, 327673, 0, 13, 327674, 0, 13, 327675, 0, 13, 327676, 0, 13, 327677, 0, 13, 327678, 0, 13, 327679, 0, 13, 262144, 0, 13, 262145, 0, 13, 262146, 0, 13, 262147, 0, 13, 262148, 0, 13, 262149, 0, 13, 262150, 0, 13, 262151, 0, 13, 262152, 0, 13, 262153, 0, 13, 262154, 0, 13, 262137, 0, 13, 262138, 0, 13, 262139, 0, 13, 262141, 0, 13, 262142, 0, 13, 262143, 0, 13, 196608, 0, 13, 196609, 0, 13, 196610, 0, 13, 196611, 0, 13, 196612, 0, 13, 196613, 0, 13, 196614, 0, 13, 196615, 0, 13, 196616, 0, 13, 196617, 0, 13, 196618, 0, 13, 131082, 0, 13, 131081, 0, 13, 131080, 0, 13, 131079, 0, 13, 131078, 0, 13, 131077, 0, 13, 131076, 0, 13, 131075, 0, 13, 131074, 0, 13, 131073, 0, 13, 131072, 0, 13, 196607, 0, 13, 196606, 0, 13, 196605, 0, 13, 196604, 0, 13, 196602, 0, 13, 196601, 0, 13, 131065, 0, 13, 131066, 0, 13, 131067, 0, 13, 131068, 0, 13, 131069, 0, 13, 131070, 0, 13, 131071, 0, 13, 65536, 0, 13, 65537, 0, 13, 65538, 0, 13, 65539, 0, 13, 65540, 0, 13, 65541, 0, 13, 65542, 0, 13, 65543, 0, 13, 65544, 0, 13, 65545, 0, 13, 65546, 0, 13, 10, 0, 12, 9, 0, 12, 8, 0, 12, 7, 0, 12, 6, 0, 12, 5, 0, 12, 4, 0, 12, 3, 0, 12, 2, 0, 12, 1, 0, 12, 0, 0, 12, 65535, 0, 12, 65534, 0, 12, 65533, 0, 12, 65532, 0, 12, 65531, 0, 12, 65530, 0, 12, 65529, 0, 12, -7, 0, 11, -6, 0, 11, -5, 0, 11, -4, 0, 11, -3, 0, 11, -2, 0, 11, -1, 0, 11, -65536, 0, 11, -65535, 0, 11, -65534, 0, 11, -65533, 0, 11, -65532, 0, 11, -65531, 0, 11, -65530, 0, 11, -65529, 0, 11, -65528, 0, 11, -65527, 0, 11, -65526, 0, 11, -65543, 0, 11, -65542, 0, 11, -65541, 0, 11, -65540, 0, 11, -65539, 0, 11, -65538, 0, 11, -65537, 0, 11, -131072, 0, 11, -131071, 0, 11, -131070, 0, 11, -131069, 0, 11, -131068, 0, 11, -131067, 0, 11, -131066, 0, 11, -131065, 0, 11, -131064, 0, 11, -131063, 0, 11, -131062, 0, 11, -196598, 0, 10, -196599, 0, 10, -196600, 0, 10, -196601, 0, 10, -196602, 0, 10, -196603, 0, 10, -196604, 0, 10, -196605, 0, 10, -196606, 0, 10, -196607, 0, 10, -196608, 0, 10, -131073, 0, 10, -131074, 0, 10, -131075, 0, 10, -131076, 0, 10, -131077, 0, 10, -196613, 0, 9, -196614, 0, 9, -196615, 0, 9, -131079, 0, 10, -131078, 0, 10, -196612, 0, 9, -196611, 0, 9, -196610, 0, 9, -196609, 0, 9, -262144, 0, 9, -262143, 0, 9, -262142, 0, 9, -262141, 0, 9, -262140, 0, 9, -262139, 0, 9, -262138, 0, 9, -262137, 0, 9, -262136, 0, 9, -262135, 0, 9, -262134, 0, 9, 458745, 0, 14, 458746, 0, 14, 458747, 0, 14, 458748, 0, 14, 458749, 0, 14, 458750, 0, 14, 458751, 0, 14, 393216, 0, 14, 393217, 0, 14, 393218, 0, 14, 393219, 0, 14, 393220, 0, 14, 393221, 0, 14, 393222, 0, 14, 393223, 0, 14, 393224, 0, 14, 393225, 0, 14, 393226, 0, 14, 196603, 0, 13, 262140, 0, 13)
layer_1/name = "Mid"
layer_1/tile_data = PackedInt32Array(458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0)

[node name="ScoreLabel" type="Label" parent="."]
top_level = true
offset_left = 13.0
offset_top = -29.0
offset_right = 53.0
offset_bottom = -6.0
theme_override_fonts/font = ExtResource("6_i8qhj")
text = "0"
horizontal_alignment = 1

[connection signal="timeout" from="Spawn_Timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="player_died" from="Killzone" to="." method="_on_killzone_player_died"]
